[add] debugging setting for windows

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,55 +2,17 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "version": "0.2.0",
-      "configurations": [
-        {
-          "name": "C++ Launch",
-          "type": "lldb",
-          "request": "launch",
-          "program": "${workspaceFolder}/a",
-          "args": [],
-          "cwd": "${workspaceFolder}",
-          "preLaunchTask": "build",
-          "stopOnEntry": false
-        }
-      ]
-    },
-    {
-      "name": "C/C++ Runner: Debug Session",
-      "type": "cppvsdbg",
-      "request": "launch",
-      "args": [],
-      "stopAtEntry": false,
-      "console": "externalTerminal",
-      "cwd": "c:/Users/SSAFY/Desktop/제영호/Algorithms",
-      "program": "c:/Users/SSAFY/Desktop/제영호/Algorithms/build/Debug/outDebug"
-    },
-    {
-      "name": "C/C++: g++.exe build and debug active file",
+      "name": "Windows: a.exe (gdb, external console)",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
-      "args": [],
-      "stopAtEntry": false,
-      "cwd": "${fileDirname}",
-      "environment": [],
-      "externalConsole": false,
+      "program": "${workspaceFolder}\\a.exe",
+      "cwd": "${workspaceFolder}",
       "MIMode": "gdb",
       "miDebuggerPath": "C:\\Users\\SSAFY\\Desktop\\mingw64\\bin\\gdb.exe",
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        },
-        {
-          "description": "Set Disassembly Flavor to Intel",
-          "text": "-gdb-set disassembly-flavor intel",
-          "ignoreFailures": true
-        }
-      ],
-      "preLaunchTask": "C/C++: g++.exe build active file"
+      "externalConsole": true,
+      "stopAtEntry": false,
+      "internalConsoleOptions": "neverOpen",
+      "preLaunchTask": "build"
     }
   ]
 }
