--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,55 +57,11 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
-    "iostream": "cpp",
-    "algorithm": "cpp",
-    "xstddef": "cpp",
-    "vector": "cpp",
-    "xstring": "cpp",
-    "cmath": "cpp",
-    "cstddef": "cpp",
-    "cstdint": "cpp",
-    "cstdio": "cpp",
-    "cstdlib": "cpp",
-    "cstring": "cpp",
-    "cwchar": "cpp",
-    "deque": "cpp",
-    "exception": "cpp",
     "functional": "cpp",
-    "initializer_list": "cpp",
-    "ios": "cpp",
-    "iosfwd": "cpp",
-    "istream": "cpp",
-    "limits": "cpp",
-    "list": "cpp",
-    "memory": "cpp",
-    "new": "cpp",
-    "ostream": "cpp",
-    "queue": "cpp",
-    "stack": "cpp",
-    "stdexcept": "cpp",
-    "streambuf": "cpp",
-    "string": "cpp",
-    "system_error": "cpp",
-    "tuple": "cpp",
-    "type_traits": "cpp",
-    "typeinfo": "cpp",
-    "unordered_map": "cpp",
-    "utility": "cpp",
-    "xfacet": "cpp",
+    "xstddef": "cpp",
+    "deque": "cpp",
     "xhash": "cpp",
-    "xiosbase": "cpp",
-    "xlocale": "cpp",
-    "xlocinfo": "cpp",
-    "xlocnum": "cpp",
-    "xmemory": "cpp",
-    "xmemory0": "cpp",
-    "xtr1common": "cpp",
-    "xutility": "cpp",
-    "terminal.integrated.defaultEncoding": "utf-8",
-    "terminal.integrated.env.windows": {
-      "LANG": "ko_KR.UTF-8",
-      "LC_ALL": "ko_KR.UTF-8"
-    }
+    "xstring": "cpp",
+    "xutility": "cpp"
   }
 }
