--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,15 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Debug with LLDB",
+      "type": "lldb",
+      "request": "launch",
+      "program": "${workspaceFolder}/a.out", // 실행 파일 경로
+      "args": [], // 프로그램 실행 시 인자
+      "cwd": "${workspaceFolder}", // 작업 디렉토리
+      "stopAtEntry": false
+    },
+    {
       "name": "Windows: a.exe (gdb, external console)",
       "type": "cppdbg",
       "request": "launch",
